@@ -243,7 +243,10 @@ ZHash::ZHash(int rows, int keysz)
     sfhashfcn = sfhashfcn_new(rows);
 
     if ( !sfhashfcn )
-        return;  // FIXIT-H can't just return
+    {
+        FatalError("can't allocate hash table\n");
+        return;
+    }
 
     /* Allocate the array of node ptrs */
     table = new ZHashNode*[rows];
